--- a/Spark DataFrames & SQL - Basics.ipynb
+++ b/Spark DataFrames & SQL - Basics.ipynb
@@ -20,7 +20,9 @@
    "outputs": [],
    "source": [
     "from __future__ import division\n",
-    "\n",
+    "import findspark\n",
+    "findspark.init()\n",
+    "findspark.find()\n",
     "import pyspark\n",
     "sc = pyspark.SparkContext()\n",
     "sqlContext = pyspark.SQLContext(sc)"
@@ -82,10 +84,10 @@
     {
      "data": {
       "text/plain": [
-       "['\"date\",\"time\",\"size\",\"r_version\",\"r_arch\",\"r_os\",\"package\",\"version\",\"country\",\"ip_id\"',\n",
-       " '\"2015-12-12\",\"13:42:10\",257886,\"3.2.2\",\"i386\",\"mingw32\",\"HistData\",\"0.7-6\",\"CZ\",1',\n",
-       " '\"2015-12-12\",\"13:24:37\",1236751,\"3.2.2\",\"x86_64\",\"mingw32\",\"RJSONIO\",\"1.3-0\",\"DE\",2',\n",
-       " '\"2015-12-12\",\"13:42:35\",2077876,\"3.2.2\",\"i386\",\"mingw32\",\"UsingR\",\"2.0-5\",\"CZ\",1']"
+       "[u'\"date\",\"time\",\"size\",\"r_version\",\"r_arch\",\"r_os\",\"package\",\"version\",\"country\",\"ip_id\"',\n",
+       " u'\"2015-12-12\",\"13:42:10\",257886,\"3.2.2\",\"i386\",\"mingw32\",\"HistData\",\"0.7-6\",\"CZ\",1',\n",
+       " u'\"2015-12-12\",\"13:24:37\",1236751,\"3.2.2\",\"x86_64\",\"mingw32\",\"RJSONIO\",\"1.3-0\",\"DE\",2',\n",
+       " u'\"2015-12-12\",\"13:42:35\",2077876,\"3.2.2\",\"i386\",\"mingw32\",\"UsingR\",\"2.0-5\",\"CZ\",1']"
       ]
      },
      "execution_count": 3,
@@ -118,26 +120,26 @@
     {
      "data": {
       "text/plain": [
-       "[['date',\n",
-       "  'time',\n",
-       "  'size',\n",
-       "  'r_version',\n",
-       "  'r_arch',\n",
-       "  'r_os',\n",
-       "  'package',\n",
-       "  'version',\n",
-       "  'country',\n",
-       "  'ip_id'],\n",
-       " ['2015-12-12',\n",
-       "  '13:42:10',\n",
-       "  '257886',\n",
-       "  '3.2.2',\n",
-       "  'i386',\n",
-       "  'mingw32',\n",
-       "  'HistData',\n",
-       "  '0.7-6',\n",
-       "  'CZ',\n",
-       "  '1']]"
+       "[[u'date',\n",
+       "  u'time',\n",
+       "  u'size',\n",
+       "  u'r_version',\n",
+       "  u'r_arch',\n",
+       "  u'r_os',\n",
+       "  u'package',\n",
+       "  u'version',\n",
+       "  u'country',\n",
+       "  u'ip_id'],\n",
+       " [u'2015-12-12',\n",
+       "  u'13:42:10',\n",
+       "  u'257886',\n",
+       "  u'3.2.2',\n",
+       "  u'i386',\n",
+       "  u'mingw32',\n",
+       "  u'HistData',\n",
+       "  u'0.7-6',\n",
+       "  u'CZ',\n",
+       "  u'1']]"
       ]
      },
      "execution_count": 5,
@@ -794,21 +796,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
